# MistralNemoLoraInference

./: .gitignore  README.md  pyproject.toml
src/: ai.ipynb  ai.py  config.yml  main.py  models.py  response_schema.txt
tests/: query.py
