[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["seeusoon <to.asmarkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
openai = "^1.53.0"
pyyaml = "^6.0.2"
python-box = "^7.2.0"
torch = "^2.5.1"
transformers = "^4.46.1"
numpy = "^2.1.2"
peft = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
